# connectome-analysis

./: .gitattributes  .gitignore  LC10-connections.ipynb  README.md  connectivity-graph-AOTU-to-DNs.ipynb  connectivity-graph.ipynb  map_visual_columns_to_LCs.py  pyproject.toml  synapses.ipynb  test_import.py
apps/TuTu-LC10a-AOTU/: __init__.py  pyproject.toml
apps/TuTu-LC10a-AOTU/src/: __init__.py
apps/TuTu-LC1a0-AOTU/: LC10_IDs.csv  supptable2_Sten2021.rtf
apps/TuTu-LC1a0-AOTU/src/: TuTuA_LC19a_recurrent.py  lc10a_flywire.py  main.py  test_connections.py
apps/analyze-upstream/src/: binocular_paths.py  test
apps/example-app/: pyproject.toml
apps/example-app/src/: __init__.py  main.py
apps/example-app/tests/: __init__.py
apps/neu-LC10a-connectivity/src/: P1_TuTu_types.py
apps/neu-binocular-to-LC10a/src/: LC14_to_AOTU.py
libs/: __init__.py  flywire_funcs.py  network.py  neuprint_funcs.py  plotting.py  pyproject.toml  utils.py
libs/tests/: __init__.py  test_utils.py
nbs/: LC10-connections.ipynb
