[project]
name = "TuTu-LC1a0-AOTU"
version = "0.1.0"
description = "TuTu-LC1a0-AOTU analysis app using connectome analysis libraries"
requires-python = ">=3.10"
dependencies = [
    "libs",
]

[tool.uv.sources]
libs = { workspace = true }

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.metadata]
allow-direct-references = true
